@@ -23,6 +23,11 @@ except ImportError:  # pragma: no cover
 import unittest
 from functools import update_wrapper
 
+try:
+    import OpenSSL
+except ImportError:
+    OpenSSL = None
+
 from werkzeug.testsuite import WerkzeugTestCase
 
 from werkzeug import __version__ as version, serving
@@ -46,7 +51,7 @@ def silencestderr(f):
     return update_wrapper(new_func, f)
 
 
-def run_dev_server(application):
+def run_dev_server(application, *args, **kwargs):
     servers = []
 
     def tracking_make_server(*args, **kwargs):
@@ -56,7 +61,8 @@ def run_dev_server(application):
     serving.make_server = tracking_make_server
     try:
         t = Thread(target=serving.run_simple,
-                   args=('localhost', 0, application))
+                   args=('localhost', 0, application) + args,
+                   kwargs=kwargs)
         t.setDaemon(True)
         t.start()
         time.sleep(0.25)
@@ -109,6 +115,18 @@ class ServingTestCase(WerkzeugTestCase):
         conn.request('GET', 'http://surelynotexisting.example.com:1337/index.htm')
         res = conn.getresponse()
         assert res.read() == b'YES'
+
+    if OpenSSL is not None:
+        def test_ssl_context_adhoc(self):
+            def hello(environ, start_response):
+                start_response('200 OK', [('Content-Type', 'text/html')])
+                return [b'hello']
+            server, addr = run_dev_server(hello, ssl_context='adhoc')
+            assert addr is not None
+            connection = httplib.HTTPSConnection(addr)
+            connection.request('GET', '/')
+            response = connection.getresponse()
+            assert response.read() == b'hello'
 
 
 def suite():
