@@ -8,6 +8,8 @@ Release date and codename to be decided
 
 - Changed the error handling of and improved testsuite for the caches in
   ``contrib.cache``.
+- Fixed a bug on Python 3 when creating adhoc ssl contexts, due to `sys.maxint`
+  not being defined.
 
 Version 0.9.5
 -------------
